WebShop.API/src/main/java/com/example/webshopapi/error/exception/InvalidUserException.java
package com.example.webshopapi.error.exception;

public class InvalidUserException extends RuntimeException {
    public InvalidUserException(String message) {
        super(message);
    }
}